--- a/modules/10_ironmine_irm/app/views/irm/my_password/edit_password.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/my_password/edit_password.html.erb
@@ -71,6 +71,10 @@
     </table>
     <%= error_for @person%>
     <%= flash_notice %>
+
+    <% if @person.is_ldap? %>
+    <%= content_tag :div, I18n.t(:label_irm_identity_ldap_can_not_edit_password), {:id => "succDiv_ep", :class => "alert alert-success"}%>
+    <% else %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <div class="sub-page-block-header">
@@ -83,6 +87,7 @@
       </div>
 
     </div>
+    <% end %>
 
     <table class="page-block-footer"><tr>
       <td class="page-block-title">
