fixed: ldap用户不能修改密码

--- a/modules/10_ironmine_irm/app/views/irm/my_password/edit_password.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/my_password/edit_password.html.erb
@@ -65,7 +65,9 @@
           <h2 class="block-title"><%=t(:label_irm_identity_edit_password)%></h2>
         </td>
         <td class="page-block-button">
+          <% unless @person.is_ldap? %>
           <%= content_for :form_buttons   %>
+          <% end %>
         </td>
       </tr>
     </table>
@@ -82,7 +84,9 @@
           <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
         </div>
         <div class="sub-page-block-body">
+          <% unless @person.is_ldap? %>
           <%= content_for :form_block_common   %>
+          <% end %>
         </div>
       </div>
 
