--- a/modules/20_incident_icm/app/views/icm/incident_journals/_list_journals.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_list_journals.html.erb
@@ -9,7 +9,7 @@
         </span>
     </div>
      <div style="float:right; padding: 5px 10px;">
-       <%= link_to t(:delete), {:controller => "icm/incident_journals", :action => "delete",:request_id => @incident_request.id, :id => journal[:id], :_dom_id => "enabled_#{journal[:id]}}"},:remote => true %>
+       <%= link_to t(:delete), {:controller => "icm/incident_journals", :action => "delete",:request_id => @incident_request.id, :id => journal[:id], :format => "js", :_dom_id => "enabled_#{journal[:id]}"},:remote => true %>
        <% if allow_to_function?(:edit_any_journal) || (allow_to_function?(:edit_self_journal) && journal[:replied_by].eql?(Irm::Person.current.id)) %>
            &nbsp;|&nbsp;<%= link_to t(:edit), {:controller => "icm/incident_journals", :action => "edit",:request_id => @incident_request.id, :id => journal[:id]}%>
        <% end %>
