--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -2135,6 +2135,7 @@ a.go-top .icon {
 @import "plugins/mask";
 @import "framework/datepicker";
 @import "framework/colorpicker";
+@import "framework/timepicker";
 @import "framework/tabs";
 
 
