feature: 1. 增加日立项目模块 115_hitachi_htc 2. 为事故单增加6个客户化时间字段

--- a/modules/20_incident_icm/app/views/icm/incident_requests/_edit_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_requests/_edit_form.html.erb
@@ -129,6 +129,7 @@
             </td>
           </tr>
        <%end%>
+       <%= render :partial=>"edit_form_external_field", :locals=>{:f => f} %>
       </tbody>
     </table>
   <% end %>
