--- a/app/views/helper/_upload_file_template.html.erb
+++ b/app/views/helper/_upload_file_template.html.erb
@@ -28,6 +28,9 @@
       filter:alpha(opacity:1);
   }
 
+  #file_body .input-append {
+      height: 25px;
+  }
   td.data-col-1{
       width: 180px;
       text-align:left;
