将自定义input file 的css 代码移动到framework.css.less文件中，便于多处使用

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -2127,6 +2127,37 @@ a.go-top .icon {
     background: url(@goTopPath) 0 0;
 }
 
+//=====custom input file =====================
+.input-file-value {
+    width: 100px;
+}
+.input-file-btn {
+    margin-left: -4px !important;
+}
+
+.file-upload-box{
+    width:100%;
+    overflow:hidden;
+    position: relative;
+    cursor: pointer;
+}
+
+.file-upload-box .file-input{
+    position:absolute;
+    left:0;
+    top:0;
+    border:0 none;
+    width:100%;
+    margin:0;
+    padding:0;
+    cursor:pointer;
+    font-size:21px;
+    _font-size:15px;
+    z-index: 99;
+    opacity:0;
+    filter:alpha(opacity=1);
+}
+
 //=====auto saving =====================
 @import "framework/auto-saving";
 
