将新建文件的input file 改用自定义的上传组件

--- a/modules/30_knowledge_skm/app/views/skm/file_managements/_new_form.html.erb
+++ b/modules/30_knowledge_skm/app/views/skm/file_managements/_new_form.html.erb
@@ -5,7 +5,9 @@
           <tbody>
           <tr>
             <td class="label-col"><label><%=(t :label_skm_file)%></label></td>
-            <td class="data-2col"><%=file_field_tag "file[0][file]", :required=>true%></td>
+            <td class="data-2col">
+              <%=input_file_tag "file[0][file]", :required=>true%>
+            </td>
           </tr>
           <tr>
             <td class="label-col"><label><%=(t :label_skm_file_category)%></label></td>
