修正新建mail alert时玩法选择相关人员的bug

--- a/modules/10_ironmine_irm/app/views/irm/wf_mail_alerts/_new_form.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/wf_mail_alerts/_new_form.html.erb
@@ -118,7 +118,7 @@
           $("select#bo_code").change(function(event){
               var bo = $(this);
               var url = decodeURIComponent(bo.attr("href"));
-              url = url.replace("{bo_code}",bo.val());
+              url = url.replace("${bo_code}",bo.val());
               $.getJSON(url,{},function(datas){
                   var items = [];
                   datas = datas["items"] ;
