--- a/modules/115_hitachi_htc/app/views/icm/incident_requests/_edit_form_external_field.html.erb
+++ b/modules/115_hitachi_htc/app/views/icm/incident_requests/_edit_form_external_field.html.erb
@@ -21,11 +21,11 @@
 <tr>
     <td class="label-col"><label for="incident_request_cux_response_hours"><%= I18n.t(:label_icm_incident_request_cux_response_hours)%></label></td>
     <td class="data-col">
-        <%=f.text_field :cux_response_hours%>
-    </td>
-    <td class="label-col"><label for="incident_request_cux_resolve_hours"><%= I18n.t(:label_icm_incident_request_cux_resolve_hours)%></label></td>
-    <td class="data-col">
-        <%=f.text_field :cux_resolve_hours%>
+          <%=f.text_field :cux_response_hours, :irm_pos_real_number => true%>
+      </td>
+      <td class="label-col"><label for="incident_request_cux_resolve_hours"><%= I18n.t(:label_icm_incident_request_cux_resolve_hours)%></label></td>
+      <td class="data-col">
+          <%=f.text_field :cux_resolve_hours, :irm_pos_real_number => true%>
     </td>
 </tr>
 
